# cligen-rs

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  CREDITS.md  Cargo.toml  METHODOLOGY.md  README.md  deny.toml
.agent/: PLANS.md
crates/cligen/: Cargo.toml
crates/cligen/examples/: a5e0_runner.rs
crates/cligen/schemas/: provenance-v1.schema.json  quality-report-s2-m3.schema.json
crates/cligen/src/: a5e0.rs  acm.rs  calendar.rs  cbk1.rs  cbk3.rs  cbk4.rs  cbk5.rs  cbk7.rs  cbk9.rs  ccl1.rs  cinterp.rs  cli_diff.rs  crandom3.rs  daily.rs  deviates.rs  fast_batch.rs  fortran_format.rs  lib.rs  libm_pinned.rs  modes.rs  monthlies.rs  observed.rs  output.rs  parquet_output.rs  profile.rs  provenance.rs  qc.rs  rng.rs  routed_precip.rs  runspec.rs  storm.rs  typed_output.rs
crates/cligen/src/par/: file.rs  intake.rs  mod.rs  sta_parms.rs
crates/cligen/src/prism/: distribution.json  grid.rs  localize.rs  method.json  mod.rs  run.rs  sync.rs
crates/cligen/src/quality/: aggregation.rs  estimators.rs  groups.rs  intake.rs  interannual.rs  mod.rs  process.rs  report.rs  tails.rs  targets.rs  winter.rs
crates/cligen/src/station/: document.rs  document_v2.rs  mod.rs  model.rs
crates/cligen/src/stations/: manifests.json  mod.rs  query.rs  sync.rs
crates/cligen/tests/: a1_output.rs  a8c_routed_daily.rs  acm_vectors.rs  calendar_vectors.rs  cli_diff.rs  cli_parity.rs  daily_identity.rs  format_identity.rs  modern_station_parity.rs  modes_identity.rs  par_state_identity.rs  parquet_output.rs  provenance.rs  qc_filter.rs  qc_vectors.rs  quality_report.rs  quality_v3_metrics.rs  quality_v3_validation.rs  runspec_cli.rs  runspec_vectors.rs  station_collection_conversion.rs  station_document.rs  stations.rs  storm_identity.rs  tap_identity.rs
crates/cligen/tests/fixtures/runspec/fish-springs-ut-observed-padded-seed0/: inp.yaml
crates/cligen/tests/fixtures/runspec/fish-springs-ut-observed-padded-seed17/: inp.yaml
crates/cligen/tests/fixtures/runspec/fish-springs-ut-observed-truncated-seed0/: inp.yaml
crates/cligen/tests/fixtures/runspec/fish-springs-ut-observed-truncated-seed17/: inp.yaml
crates/cligen/tests/fixtures/runspec/jeogla-au-seed0/: inp.yaml
crates/cligen/tests/fixtures/runspec/jeogla-au-seed17/: inp.yaml
crates/cligen/tests/fixtures/runspec/mt-wilson-ca-observed-seed0/: inp.yaml
crates/cligen/tests/fixtures/runspec/mt-wilson-ca-observed-seed17/: inp.yaml
crates/cligen/tests/fixtures/runspec/new-meadows-id-seed0/: inp.yaml
crates/cligen/tests/fixtures/runspec/new-meadows-id-seed17/: inp.yaml
crates/cligen/tests/fixtures/runspec/new-meadows-id-single-storm-seed0/: inp.yaml
crates/cligen/tests/fixtures/runspec/new-meadows-id-single-storm-seed17/: inp.yaml
docs/: ROADMAP.md  c3-lemhi-gpu-computing-for-agents.md
docs/backlog/: 20260709-flat-file-modernization.md
docs/decisions/: 0001-source-code-authority-port.md  0002-quality-metrics-authority.md  0003-qc-filter-exposure.md  0004-a5b-interannual-no-promotion.md  0005-a10-refinement-before-spatial-promotion.md  0006-a10-runtime-boundary-expansion.md  0007-a10-external-normal-conditioning.md  0008-lemhi-gpu-capacity-policy.md  README.md
fixtures/: README.md
references/: README.md
research/: __init__.py
research/a9c/: data.py  (+4 more)
scripts/: bench_cli_runtime.py  bench_fast_batch_runtime.py  profile_cli_runtime.py
(+3042 files in other folders)
