[package]
name = "cligen"
description = "Rust implementation of the CLIGEN stochastic weather generator (source-code-authority port of CLIGEN 5.32.x)"
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
clap = { version = "4.5", features = ["derive"] }
libm = "0.2"
serde = { version = "1.0", features = ["derive"] }
# float_roundtrip: report consumers must parse the exact f64 the
# emitter wrote (SPEC-QUALITY-REPORT byte determinism; the default
# best-effort float parse is ±1 ULP).
serde_json = { version = "1.0", features = ["float_roundtrip"] }
serde_path_to_error = "0.1"
serde_yaml = "0.9"
sha2 = "0.10"
