[package]
name = "cligen"
description = "Rust implementation of the CLIGEN stochastic weather generator (source-code-authority port of CLIGEN 5.32.x)"
# Station payload data ships OUTSIDE the crate (SPEC-STATION-DB);
# the au test-fixture archive is real payload bytes and must not
# ride in the crates.io tarball (Q2 R1 finding 3).
exclude = ["tests/fixtures/stations/"]
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
arrow-array = "=59.1.0"
arrow-schema = "=59.1.0"
clap = { version = "4.5", features = ["derive"] }
flate2 = "1.0"
jsonschema = { version = "=0.47.0", default-features = false }
libm = "0.2"
parquet = { version = "=59.1.0", default-features = false, features = ["arrow", "zstd"] }
# bundled: the payload catalogs are python-produced SQLite files
# (SPEC-STATION-DB); no system sqlite dependency.
rusqlite = { version = "0.32", features = ["bundled"] }
# Atomic no-replace publication where the host exposes renameat2/renamex_np;
# other targets use the hard-link fallback in parquet_output.
rustix = { version = "=1.1.4", features = ["fs"] }
unicode-normalization = "=0.1.24"
unicode-casefold = "=0.2.0"
serde = { version = "1.0", features = ["derive"] }
# float_roundtrip: report consumers must parse the exact f64 the
# emitter wrote (SPEC-QUALITY-REPORT byte determinism; the default
# best-effort float parse is ±1 ULP).
serde_json = { version = "=1.0.150", features = ["float_roundtrip"] }
serde_path_to_error = "0.1"
serde-value = "=0.7.0"
serde_yaml = "0.9"
sha2 = "0.10"
tar = "0.4"
ureq = "2.10"
